<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".screens.AboutFragment">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/primaryDarkColor"
        android:clickable="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_full_name"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:textColor="@color/primaryDarkColor"
        android:clickable="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/author"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/author_name"
            android:padding="2dp"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/version"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/versionName"
            android:padding="2dp"
            android:textSize="25sp" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resetTimeButton"
        android:text="@string/writeReviews"
        android:layout_marginTop="10dp"
        style="@style/ButtonStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/vkImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/vk"
            android:layout_margin="8dp"
            />
        <ImageView
            android:id="@+id/instagramImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/insta"
            android:layout_margin="8dp"
            />
        <ImageView
            android:id="@+id/telegramImageView"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/telegram"
            android:layout_margin="8dp"
            />

    </LinearLayout>


</LinearLayout>