<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".screens.LoginSignupFragment">

<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adViewTop"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        ads:adSize="BANNER"-->
<!--        ads:adUnitId="@string/banner_ad_unit_id">-->
<!--    </com.google.android.gms.ads.AdView>-->

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        app:errorEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputName"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputConfirmPassword"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dangedLoginSignUpTextView"
        android:text="Все ваши данные будут зашифрованы и не попадут 3-им лицам. Пароль не увидит даже разработчик приложения."
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:textColor="@color/primaryDarkColor" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginSignUpButton"
        android:text="@string/registration"
        android:layout_marginTop="10dp"
        style="@style/ButtonStyle"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toggleLoginSignUpTextView"
        android:text="@string/logIn"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:background="@color/primaryLightColor"
        android:textColor="@color/primaryDarkColor"
        android:clickable="true" />

</LinearLayout>