<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/app_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <!--    Name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/renameTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/renameTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/newName"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/aboutTextInputLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="8"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/aboutTextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/aboutMe"
                        android:inputType="textEmailAddress" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/addImageButtonImageView"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:src="@drawable/ic_baseline_image_24" />

            </LinearLayout>


            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:gravity="center_horizontal"
                android:text="@string/setTime"
                android:textSize="22sp"></TextView>


            <Button
                android:id="@+id/saveNewDataButton"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>

<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adViewBottomSettings"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="center_horizontal"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginTop="30dp"-->
<!--        ads:adSize="BANNER"-->
<!--        ads:adUnitId="@string/banner_ad_unit_id">-->
<!--    </com.google.android.gms.ads.AdView>-->

</RelativeLayout>